src/gen/AQLParser.java
// Generated from AQLParser.g4 by ANTLR 4.13.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FOR_EACH=1, IN=2, SET=3, AS=4, GET=5, POST=6, PUT=7, DELETE=8, WITH=9, 
		ON=10, ON_ERROR=11, ON_SUCCESS=12, ELSE=13, LOG=14, EQUAL=15, NOT_EQUAL=16, 
		LESS=17, GREATER=18, LESS_EQUAL=19, GREATER_EQUAL=20, OPEN_BRACE=21, CLOSE_BRACE=22, 
		COLON=23, COMMA=24, DOT=25, QUOTEDOUBLE=26, QUOTESINGLE=27, URI=28, URI_TAIL=29, 
		VARIABLE=30, ALPHANUM=31, NUMBER=32, WS=33;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_loop = 2, RULE_set = 3, RULE_log = 4, 
		RULE_onElse = 5, RULE_withBlock = 6, RULE_request = 7, RULE_getReq = 8, 
		RULE_postReq = 9, RULE_putReq = 10, RULE_delReq = 11, RULE_onSuccess = 12, 
		RULE_onError = 13, RULE_condition = 14, RULE_params = 15, RULE_param = 16, 
		RULE_dynamicURI = 17, RULE_dynamicVar = 18, RULE_string = 19, RULE_value = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "loop", "set", "log", "onElse", "withBlock", 
			"request", "getReq", "postReq", "putReq", "delReq", "onSuccess", "onError", 
			"condition", "params", "param", "dynamicURI", "dynamicVar", "string", 
			"value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'FOR EACH'", "'IN'", "'SET'", "'AS'", "'GET'", "'POST'", "'PUT'", 
			"'DELETE'", "'WITH'", "'ON'", "'ON ERROR'", "'ON SUCCESS'", "'ELSE'", 
			"'LOG'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'{'", "'}'", 
			"':'", "','", "'.'", "'\"'", "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FOR_EACH", "IN", "SET", "AS", "GET", "POST", "PUT", "DELETE", 
			"WITH", "ON", "ON_ERROR", "ON_SUCCESS", "ELSE", "LOG", "EQUAL", "NOT_EQUAL", 
			"LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", "OPEN_BRACE", "CLOSE_BRACE", 
			"COLON", "COMMA", "DOT", "QUOTEDOUBLE", "QUOTESINGLE", "URI", "URI_TAIL", 
			"VARIABLE", "ALPHANUM", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AQLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				statement();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 16874L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public RequestContext request() {
			return getRuleContext(RequestContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public LogContext log() {
			return getRuleContext(LogContext.class,0);
		}
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GET:
			case POST:
			case PUT:
			case DELETE:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				request();
				}
				break;
			case FOR_EACH:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				loop();
				}
				break;
			case LOG:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				log();
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				set();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopContext extends ParserRuleContext {
		public TerminalNode FOR_EACH() { return getToken(AQLParser.FOR_EACH, 0); }
		public TerminalNode IN() { return getToken(AQLParser.IN, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(AQLParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(AQLParser.CLOSE_BRACE, 0); }
		public List<DynamicVarContext> dynamicVar() {
			return getRuleContexts(DynamicVarContext.class);
		}
		public DynamicVarContext dynamicVar(int i) {
			return getRuleContext(DynamicVarContext.class,i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(AQLParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(AQLParser.VARIABLE, i);
		}
		public RequestContext request() {
			return getRuleContext(RequestContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_loop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(FOR_EACH);
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(54);
				dynamicVar();
				}
				break;
			case 2:
				{
				setState(55);
				match(VARIABLE);
				}
				break;
			}
			setState(58);
			match(IN);
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(59);
				request();
				}
				break;
			case 2:
				{
				setState(60);
				dynamicVar();
				}
				break;
			case 3:
				{
				setState(61);
				match(VARIABLE);
				}
				break;
			}
			setState(64);
			match(OPEN_BRACE);
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				statement();
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 16874L) != 0) );
			setState(70);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(AQLParser.SET, 0); }
		public TerminalNode AS() { return getToken(AQLParser.AS, 0); }
		public TerminalNode VARIABLE() { return getToken(AQLParser.VARIABLE, 0); }
		public RequestContext request() {
			return getRuleContext(RequestContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_set);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(SET);
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GET:
			case POST:
			case PUT:
			case DELETE:
				{
				setState(73);
				request();
				}
				break;
			case OPEN_BRACE:
			case VARIABLE:
			case NUMBER:
				{
				setState(74);
				value();
				}
				break;
			case QUOTEDOUBLE:
			case QUOTESINGLE:
				{
				setState(75);
				string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(78);
			match(AS);
			setState(79);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogContext extends ParserRuleContext {
		public TerminalNode LOG() { return getToken(AQLParser.LOG, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public LogContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_log; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterLog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitLog(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitLog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogContext log() throws RecognitionException {
		LogContext _localctx = new LogContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_log);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(LOG);
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_BRACE:
			case VARIABLE:
			case NUMBER:
				{
				setState(82);
				value();
				}
				break;
			case QUOTEDOUBLE:
			case QUOTESINGLE:
				{
				setState(83);
				string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OnElseContext extends ParserRuleContext {
		public TerminalNode ON() { return getToken(AQLParser.ON, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<TerminalNode> OPEN_BRACE() { return getTokens(AQLParser.OPEN_BRACE); }
		public TerminalNode OPEN_BRACE(int i) {
			return getToken(AQLParser.OPEN_BRACE, i);
		}
		public List<TerminalNode> CLOSE_BRACE() { return getTokens(AQLParser.CLOSE_BRACE); }
		public TerminalNode CLOSE_BRACE(int i) {
			return getToken(AQLParser.CLOSE_BRACE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(AQLParser.ELSE, 0); }
		public OnElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterOnElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitOnElse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitOnElse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OnElseContext onElse() throws RecognitionException {
		OnElseContext _localctx = new OnElseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_onElse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ON);
			setState(87);
			condition();
			setState(88);
			match(OPEN_BRACE);
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				statement();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 16874L) != 0) );
			setState(94);
			match(CLOSE_BRACE);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(95);
				match(ELSE);
				setState(96);
				match(OPEN_BRACE);
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(97);
					statement();
					}
					}
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 16874L) != 0) );
				setState(102);
				match(CLOSE_BRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WithBlockContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(AQLParser.WITH, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(AQLParser.OPEN_BRACE, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(AQLParser.CLOSE_BRACE, 0); }
		public WithBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_withBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterWithBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitWithBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitWithBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WithBlockContext withBlock() throws RecognitionException {
		WithBlockContext _localctx = new WithBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_withBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(WITH);
			setState(107);
			match(OPEN_BRACE);
			setState(108);
			params();
			setState(109);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequestContext extends ParserRuleContext {
		public GetReqContext getReq() {
			return getRuleContext(GetReqContext.class,0);
		}
		public PostReqContext postReq() {
			return getRuleContext(PostReqContext.class,0);
		}
		public PutReqContext putReq() {
			return getRuleContext(PutReqContext.class,0);
		}
		public DelReqContext delReq() {
			return getRuleContext(DelReqContext.class,0);
		}
		public RequestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_request; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterRequest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitRequest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitRequest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequestContext request() throws RecognitionException {
		RequestContext _localctx = new RequestContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_request);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GET:
				{
				setState(111);
				getReq();
				}
				break;
			case POST:
				{
				setState(112);
				postReq();
				}
				break;
			case PUT:
				{
				setState(113);
				putReq();
				}
				break;
			case DELETE:
				{
				setState(114);
				delReq();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GetReqContext extends ParserRuleContext {
		public TerminalNode GET() { return getToken(AQLParser.GET, 0); }
		public DynamicURIContext dynamicURI() {
			return getRuleContext(DynamicURIContext.class,0);
		}
		public WithBlockContext withBlock() {
			return getRuleContext(WithBlockContext.class,0);
		}
		public List<OnSuccessContext> onSuccess() {
			return getRuleContexts(OnSuccessContext.class);
		}
		public OnSuccessContext onSuccess(int i) {
			return getRuleContext(OnSuccessContext.class,i);
		}
		public List<OnErrorContext> onError() {
			return getRuleContexts(OnErrorContext.class);
		}
		public OnErrorContext onError(int i) {
			return getRuleContext(OnErrorContext.class,i);
		}
		public List<OnElseContext> onElse() {
			return getRuleContexts(OnElseContext.class);
		}
		public OnElseContext onElse(int i) {
			return getRuleContext(OnElseContext.class,i);
		}
		public GetReqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_getReq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterGetReq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitGetReq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitGetReq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GetReqContext getReq() throws RecognitionException {
		GetReqContext _localctx = new GetReqContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_getReq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(GET);
			setState(118);
			dynamicURI();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(119);
				withBlock();
				}
			}

			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7168L) != 0)) {
				{
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ON_SUCCESS:
					{
					setState(122);
					onSuccess();
					}
					break;
				case ON_ERROR:
					{
					setState(123);
					onError();
					}
					break;
				case ON:
					{
					setState(124);
					onElse();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PostReqContext extends ParserRuleContext {
		public TerminalNode POST() { return getToken(AQLParser.POST, 0); }
		public DynamicURIContext dynamicURI() {
			return getRuleContext(DynamicURIContext.class,0);
		}
		public WithBlockContext withBlock() {
			return getRuleContext(WithBlockContext.class,0);
		}
		public List<OnSuccessContext> onSuccess() {
			return getRuleContexts(OnSuccessContext.class);
		}
		public OnSuccessContext onSuccess(int i) {
			return getRuleContext(OnSuccessContext.class,i);
		}
		public List<OnErrorContext> onError() {
			return getRuleContexts(OnErrorContext.class);
		}
		public OnErrorContext onError(int i) {
			return getRuleContext(OnErrorContext.class,i);
		}
		public List<OnElseContext> onElse() {
			return getRuleContexts(OnElseContext.class);
		}
		public OnElseContext onElse(int i) {
			return getRuleContext(OnElseContext.class,i);
		}
		public PostReqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postReq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterPostReq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitPostReq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitPostReq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostReqContext postReq() throws RecognitionException {
		PostReqContext _localctx = new PostReqContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_postReq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(POST);
			setState(131);
			dynamicURI();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(132);
				withBlock();
				}
			}

			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7168L) != 0)) {
				{
				setState(138);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ON_SUCCESS:
					{
					setState(135);
					onSuccess();
					}
					break;
				case ON_ERROR:
					{
					setState(136);
					onError();
					}
					break;
				case ON:
					{
					setState(137);
					onElse();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PutReqContext extends ParserRuleContext {
		public TerminalNode PUT() { return getToken(AQLParser.PUT, 0); }
		public DynamicURIContext dynamicURI() {
			return getRuleContext(DynamicURIContext.class,0);
		}
		public WithBlockContext withBlock() {
			return getRuleContext(WithBlockContext.class,0);
		}
		public List<OnSuccessContext> onSuccess() {
			return getRuleContexts(OnSuccessContext.class);
		}
		public OnSuccessContext onSuccess(int i) {
			return getRuleContext(OnSuccessContext.class,i);
		}
		public List<OnErrorContext> onError() {
			return getRuleContexts(OnErrorContext.class);
		}
		public OnErrorContext onError(int i) {
			return getRuleContext(OnErrorContext.class,i);
		}
		public List<OnElseContext> onElse() {
			return getRuleContexts(OnElseContext.class);
		}
		public OnElseContext onElse(int i) {
			return getRuleContext(OnElseContext.class,i);
		}
		public PutReqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_putReq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).enterPutReq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AQLParserListener ) ((AQLParserListener)listener).exitPutReq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AQLParserVisitor ) return ((AQLParserVisitor<? extends T>)visitor).visitPutReq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PutReqContext putReq() throws RecognitionException {
		PutReqContext _localctx = new PutReqContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_putReq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(PUT);
			setState(144);
			dynamicURI();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(145);
				withBlock();
				}
			}
